// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModeButton when default value is different from mode 1`] = `
<div
  className="FormInput"
>
  <div
    className="FormError"
    style={
      Object {
        "display": "none",
      }
    }
  >
    
  </div>
  <radiogroup>
    <label
      className="modeButton request"
      title="Request rides"
    >
      <input
        checked={true}
        className="input"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        type="radio"
      />
      <div
        className="button"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <svg
          className="icon"
        />
      </div>
    </label>
  </radiogroup>
</div>
`;

exports[`ModeButton when default value matches mode 1`] = `
<div
  className="FormInput"
>
  <div
    className="FormError"
    style={
      Object {
        "display": "none",
      }
    }
  >
    
  </div>
  <radiogroup>
    <label
      className="modeButton offer"
      title="Offer rides"
    >
      <input
        checked={false}
        className="input"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        type="radio"
      />
      <div
        className="button"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <svg
          className="icon"
        />
      </div>
    </label>
  </radiogroup>
</div>
`;

exports[`ModeButton without a default value 1`] = `
<div
  className="FormInput"
>
  <div
    className="FormError"
    style={
      Object {
        "display": "none",
      }
    }
  >
    
  </div>
  <radiogroup>
    <label
      className="modeButton request"
      title="Request rides"
    >
      <input
        checked={false}
        className="input"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        type="radio"
      />
      <div
        className="button"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <svg
          className="icon"
        />
      </div>
    </label>
  </radiogroup>
</div>
`;
